[gd_scene load_steps=7 format=2]

[ext_resource path="res://FredokaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameModeSelection.gd" type="Script" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.286275, 0.258824, 0.258824, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="ButtonGroup" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 1, 1, 1, 0.478431 )
font_data = ExtResource( 1 )

[node name="GameModeSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 178.0
margin_top = 225.0
margin_right = 846.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 150 )

[node name="SinglePlayerBtn" type="Button" parent="CenterContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 0 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
group = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/SinglePlayerBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SinglePlayerGame" type="VBoxContainer" parent="CenterContainer/HBoxContainer/SinglePlayerBtn/CenterContainer"]
margin_left = 111.0
margin_top = 66.0
margin_right = 189.0
margin_bottom = 83.0
mouse_default_cursor_shape = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer/SinglePlayerBtn/CenterContainer/SinglePlayerGame"]
margin_right = 78.0
margin_bottom = 17.0
theme = ExtResource( 7 )
text = "Single player"
align = 1
valign = 1

[node name="Control2" type="Control" parent="CenterContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 364.0
margin_bottom = 150.0
rect_min_size = Vector2( 60, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiPlayerBtn" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 668.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 0 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
group = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/MultiPlayerBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerGame" type="VBoxContainer" parent="CenterContainer/HBoxContainer/MultiPlayerBtn/CenterContainer"]
margin_left = 10.0
margin_top = 23.0
margin_right = 290.0
margin_bottom = 127.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer/MultiPlayerBtn/CenterContainer/MultiplayerGame"]
margin_right = 280.0
margin_bottom = 17.0
theme = ExtResource( 7 )
text = "Multi-player"
align = 1

[node name="Control" type="Control" parent="CenterContainer/HBoxContainer/MultiPlayerBtn/CenterContainer/MultiplayerGame"]
margin_top = 21.0
margin_right = 280.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/MultiPlayerBtn/CenterContainer/MultiplayerGame"]
margin_top = 45.0
margin_right = 280.0
margin_bottom = 70.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 3 )
text = "Server URL:"

[node name="URL" type="LineEdit" parent="CenterContainer/HBoxContainer/MultiPlayerBtn/CenterContainer/MultiplayerGame"]
margin_top = 74.0
margin_right = 280.0
margin_bottom = 104.0
rect_min_size = Vector2( 280, 0 )
theme = ExtResource( 7 )
placeholder_text = "eg https://game.example.com"

[node name="Tween" type="Tween" parent="."]
